[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Inventory/default_inventory_background.png" type="Texture" id=1]
[ext_resource path="res://Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/04B_30__.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/stage_selection_mini.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 17
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.172549, 0.180392, 0.180392, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.172549, 0.180392, 0.180392, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.172549, 0.180392, 0.180392, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.172549, 0.180392, 0.180392, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=17]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=19]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.0823529, 0.0705882, 0.0705882, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=22]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Stage_1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "closing_mini_stage"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Stage_1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "opening_mini_stage"
tracks/0/type = "value"
tracks/0/path = NodePath("Stage_1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Stage_Selection" type="CanvasLayer"]
layer = 3
script = ExtResource( 4 )

[node name="Close_Stage_Selection" type="Button" parent="."]
modulate = Color( 0, 0, 0, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.362
anchor_right = 0.5
anchor_bottom = 0.362
margin_left = -188.0
margin_top = -135.68
margin_right = 140.0
margin_bottom = 136.32
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="TextureRect"]
anchor_left = 0.58
anchor_top = 0.083
anchor_right = 0.58
anchor_bottom = 0.083
margin_left = -114.967
margin_top = -9.576
margin_right = 115.033
margin_bottom = 9.424
custom_fonts/font = SubResource( 1 )
text = "STAGE SELECTION"

[node name="HBoxContainer" type="GridContainer" parent="TextureRect"]
anchor_left = 0.588
anchor_top = 0.5
anchor_right = 0.588
anchor_bottom = 0.5
margin_left = -118.864
margin_top = -79.0
margin_right = 111.136
margin_bottom = 111.0
custom_constants/vseparation = 10

[node name="Stage 1-1" type="Button" parent="TextureRect/HBoxContainer"]
margin_right = 230.0
margin_bottom = 30.0
rect_min_size = Vector2( 230, 30 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 10 )
text = "Tutorial 1-1"

[node name="Stage 1-2" type="Button" parent="TextureRect/HBoxContainer"]
margin_top = 40.0
margin_right = 230.0
margin_bottom = 70.0
rect_min_size = Vector2( 230, 30 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 11 )
text = "Tutorial 1-2"

[node name="Stage 1-3" type="Button" parent="TextureRect/HBoxContainer"]
margin_top = 80.0
margin_right = 230.0
margin_bottom = 110.0
rect_min_size = Vector2( 230, 30 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 12 )
text = "School ID"

[node name="Stage 1-4" type="Button" parent="TextureRect/HBoxContainer"]
margin_top = 120.0
margin_right = 230.0
margin_bottom = 150.0
rect_min_size = Vector2( 230, 30 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 12 )
text = "The Assignment"

[node name="Stage 1-5" type="Button" parent="TextureRect/HBoxContainer"]
margin_top = 160.0
margin_right = 230.0
margin_bottom = 190.0
rect_min_size = Vector2( 230, 30 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 12 )
text = "TEST YOUR KNOWLEDGE"

[node name="Stage_1" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Stage_1"]
modulate = Color( 1, 1, 1, 0.27451 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Close_Scene" type="Button" parent="Stage_1"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0

[node name="Stage 1-1" type="Panel" parent="Stage_1"]
anchor_left = 0.506
anchor_top = 0.387
anchor_right = 0.506
anchor_bottom = 0.387
margin_left = -166.16
margin_top = -103.68
margin_right = 163.84
margin_bottom = 208.32
custom_styles/panel = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Stage_1/Stage 1-1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Title" type="Label" parent="Stage_1/Stage 1-1/VBoxContainer"]
margin_right = 310.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 6 )
text = "Stage 1-1 -Tutorial-"
align = 1

[node name="Records" type="HBoxContainer" parent="Stage_1/Stage 1-1/VBoxContainer"]
margin_top = 19.0
margin_right = 310.0
margin_bottom = 34.0

[node name="Record" type="Label" parent="Stage_1/Stage 1-1/VBoxContainer/Records"]
margin_right = 63.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 7 )
text = "Record:"

[node name="Label2" type="Label" parent="Stage_1/Stage 1-1/VBoxContainer/Records"]
margin_left = 67.0
margin_right = 67.0
margin_bottom = 14.0

[node name="Condition" type="Label" parent="Stage_1/Stage 1-1/VBoxContainer"]
margin_top = 38.0
margin_right = 310.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 8 )
text = "Condition: Complete the tutorial."

[node name="Enter" type="HBoxContainer" parent="Stage_1/Stage 1-1/VBoxContainer"]
margin_top = 57.0
margin_right = 310.0
margin_bottom = 78.0

[node name="stage_1-1_start" type="Button" parent="Stage_1/Stage 1-1/VBoxContainer/Enter"]
margin_right = 57.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 9 )
text = "START"
align = 0

[node name="Stage_2" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Stage_2"]
modulate = Color( 1, 1, 1, 0.27451 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Close_Scene_2" type="Button" parent="Stage_2"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0

[node name="Stage 1-2" type="Panel" parent="Stage_2"]
anchor_left = 0.506
anchor_top = 0.387
anchor_right = 0.506
anchor_bottom = 0.387
margin_left = -166.16
margin_top = -103.68
margin_right = 163.84
margin_bottom = 208.32
custom_styles/panel = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Stage_2/Stage 1-2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Title" type="Label" parent="Stage_2/Stage 1-2/VBoxContainer"]
margin_right = 310.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 6 )
text = "Stage 1-2 -Tutorial-"
align = 1

[node name="Records" type="HBoxContainer" parent="Stage_2/Stage 1-2/VBoxContainer"]
margin_top = 19.0
margin_right = 310.0
margin_bottom = 34.0

[node name="Title" type="Label" parent="Stage_2/Stage 1-2/VBoxContainer/Records"]
margin_right = 63.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 7 )
text = "Record:"

[node name="Label2" type="Label" parent="Stage_2/Stage 1-2/VBoxContainer/Records"]
margin_left = 67.0
margin_right = 67.0
margin_bottom = 14.0

[node name="Condition" type="Label" parent="Stage_2/Stage 1-2/VBoxContainer"]
margin_top = 38.0
margin_right = 310.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 8 )
text = "Condition: Complete the tutorial."

[node name="Enter" type="HBoxContainer" parent="Stage_2/Stage 1-2/VBoxContainer"]
margin_top = 57.0
margin_right = 310.0
margin_bottom = 78.0

[node name="stage_1-2_start" type="Button" parent="Stage_2/Stage 1-2/VBoxContainer/Enter"]
margin_right = 57.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 9 )
text = "START"
align = 0

[node name="Stage_3" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Stage_3"]
modulate = Color( 1, 1, 1, 0.27451 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Close_Scene_3" type="Button" parent="Stage_3"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0

[node name="Stage 1-3" type="Panel" parent="Stage_3"]
anchor_left = 0.506
anchor_top = 0.387
anchor_right = 0.506
anchor_bottom = 0.387
margin_left = -166.16
margin_top = -103.68
margin_right = 163.84
margin_bottom = 208.32
custom_styles/panel = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Stage_3/Stage 1-3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Title" type="Label" parent="Stage_3/Stage 1-3/VBoxContainer"]
margin_right = 310.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 6 )
text = "Stage 1-3 -School ID-"
align = 1

[node name="Record" type="Label" parent="Stage_3/Stage 1-3/VBoxContainer"]
margin_top = 19.0
margin_right = 310.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 7 )
text = "Record:"

[node name="Record\'s detail" type="VBoxContainer" parent="Stage_3/Stage 1-3/VBoxContainer"]
margin_top = 38.0
margin_right = 310.0
margin_bottom = 72.0

[node name="Saved Time" type="Label" parent="Stage_3/Stage 1-3/VBoxContainer/Record\'s detail"]
margin_right = 310.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 17 )
text = "- Cleared Time: "

[node name="Saved Ans" type="Label" parent="Stage_3/Stage 1-3/VBoxContainer/Record\'s detail"]
margin_top = 19.0
margin_right = 310.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 18 )
text = "- Answered Question: "

[node name="Condition" type="Label" parent="Stage_3/Stage 1-3/VBoxContainer"]
margin_top = 76.0
margin_right = 310.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 8 )
text = "Condition: "
autowrap = true

[node name="Condition\'s detail" type="VBoxContainer" parent="Stage_3/Stage 1-3/VBoxContainer"]
margin_top = 95.0
margin_right = 310.0
margin_bottom = 146.0

[node name="cond_1" type="Label" parent="Stage_3/Stage 1-3/VBoxContainer/Condition\'s detail"]
margin_right = 310.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 19 )
text = "- Do not reach HP 0.
- 5 quiz answers are required to clear this stage.."
autowrap = true

[node name="Description" type="Label" parent="Stage_3/Stage 1-3/VBoxContainer"]
margin_top = 150.0
margin_right = 310.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 16 )
text = "Description:"
autowrap = true

[node name="Description\'s details" type="VBoxContainer" parent="Stage_3/Stage 1-3/VBoxContainer"]
margin_top = 169.0
margin_right = 310.0
margin_bottom = 220.0

[node name="descrip_1" type="Label" parent="Stage_3/Stage 1-3/VBoxContainer/Description\'s details"]
margin_right = 310.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 20 )
text = "	- Obtain the \"School ID\" by answering at least four riddles within the stage."
autowrap = true

[node name="stage_1-3_start" type="Button" parent="Stage_3/Stage 1-3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -52.0
margin_right = 50.0
margin_bottom = -13.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 9 )
custom_styles/normal = SubResource( 21 )
text = "ENTER"

[node name="Stage_4" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Stage_4"]
modulate = Color( 1, 1, 1, 0.27451 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Close_Scene_4" type="Button" parent="Stage_4"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0

[node name="Stage 1-4" type="Panel" parent="Stage_4"]
anchor_left = 0.506
anchor_top = 0.387
anchor_right = 0.506
anchor_bottom = 0.387
margin_left = -166.16
margin_top = -103.68
margin_right = 163.84
margin_bottom = 208.32
custom_styles/panel = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Stage_4/Stage 1-4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Title" type="Label" parent="Stage_4/Stage 1-4/VBoxContainer"]
margin_right = 310.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 6 )
text = "Stage 1-4 -The Assignment-"
align = 1

[node name="Record" type="Label" parent="Stage_4/Stage 1-4/VBoxContainer"]
margin_top = 19.0
margin_right = 310.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 7 )
text = "Record:"

[node name="Record\'s detail" type="VBoxContainer" parent="Stage_4/Stage 1-4/VBoxContainer"]
margin_top = 38.0
margin_right = 310.0
margin_bottom = 53.0

[node name="Saved Ans 1-4" type="Label" parent="Stage_4/Stage 1-4/VBoxContainer/Record\'s detail"]
margin_right = 310.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 18 )
text = "- Answered Question: "

[node name="Condition" type="Label" parent="Stage_4/Stage 1-4/VBoxContainer"]
margin_top = 57.0
margin_right = 310.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 8 )
text = "Condition: "
autowrap = true

[node name="Condition\'s detail" type="VBoxContainer" parent="Stage_4/Stage 1-4/VBoxContainer"]
margin_top = 76.0
margin_right = 310.0
margin_bottom = 91.0

[node name="cond_1" type="Label" parent="Stage_4/Stage 1-4/VBoxContainer/Condition\'s detail"]
margin_right = 310.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 19 )
text = "- None"
autowrap = true

[node name="Description" type="Label" parent="Stage_4/Stage 1-4/VBoxContainer"]
margin_top = 95.0
margin_right = 310.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 16 )
text = "Description:"
autowrap = true

[node name="Description\'s details" type="VBoxContainer" parent="Stage_4/Stage 1-4/VBoxContainer"]
margin_top = 114.0
margin_right = 310.0
margin_bottom = 165.0

[node name="descrip_1" type="Label" parent="Stage_4/Stage 1-4/VBoxContainer/Description\'s details"]
margin_right = 310.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 20 )
text = "- This stage is free to explore, and you can answer a question within the stage."
autowrap = true

[node name="stage_1-4_start" type="Button" parent="Stage_4/Stage 1-4"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -52.0
margin_right = 50.0
margin_bottom = -13.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 9 )
custom_styles/normal = SubResource( 21 )
text = "START"

[node name="Stage_5" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Stage_5"]
modulate = Color( 1, 1, 1, 0.27451 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Close_Scene_5" type="Button" parent="Stage_5"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0

[node name="Stage 1-5" type="Panel" parent="Stage_5"]
anchor_left = 0.506
anchor_top = 0.387
anchor_right = 0.506
anchor_bottom = 0.387
margin_left = -166.16
margin_top = -103.68
margin_right = 163.84
margin_bottom = 208.32
custom_styles/panel = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Stage_5/Stage 1-5"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Title" type="Label" parent="Stage_5/Stage 1-5/VBoxContainer"]
margin_right = 310.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 6 )
text = "Stage 1-5"
align = 1

[node name="Record" type="Label" parent="Stage_5/Stage 1-5/VBoxContainer"]
margin_top = 19.0
margin_right = 310.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 7 )
text = "Record:"

[node name="Record\'s detail" type="VBoxContainer" parent="Stage_5/Stage 1-5/VBoxContainer"]
margin_top = 38.0
margin_right = 310.0
margin_bottom = 53.0

[node name="Cleared times" type="Label" parent="Stage_5/Stage 1-5/VBoxContainer/Record\'s detail"]
margin_right = 310.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 22 )
text = "- Cleared Times:"

[node name="Condition" type="Label" parent="Stage_5/Stage 1-5/VBoxContainer"]
margin_top = 57.0
margin_right = 310.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 8 )
text = "Condition: "
autowrap = true

[node name="Condition\'s detail" type="VBoxContainer" parent="Stage_5/Stage 1-5/VBoxContainer"]
margin_top = 76.0
margin_right = 310.0
margin_bottom = 127.0

[node name="cond_1" type="Label" parent="Stage_5/Stage 1-5/VBoxContainer/Condition\'s detail"]
margin_right = 310.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 19 )
text = "- Do not reach HP 0.
- Atleast answer 1 set of questions."
autowrap = true

[node name="Description" type="Label" parent="Stage_5/Stage 1-5/VBoxContainer"]
margin_top = 131.0
margin_right = 310.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 16 )
text = "Description:"
autowrap = true

[node name="Description\'s details" type="VBoxContainer" parent="Stage_5/Stage 1-5/VBoxContainer"]
margin_top = 150.0
margin_right = 310.0
margin_bottom = 201.0

[node name="descrip_1" type="Label" parent="Stage_5/Stage 1-5/VBoxContainer/Description\'s details"]
margin_right = 310.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 20 )
text = "	-  The stage contains of series of question, 5 question per sets and has higher damage dealt."
autowrap = true

[node name="stage_1-5_start" type="Button" parent="Stage_5/Stage 1-5"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -52.0
margin_right = 50.0
margin_bottom = -13.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 9 )
custom_styles/normal = SubResource( 21 )
text = "START"

[node name="stage_animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 14 )
anims/closing_mini_stage = SubResource( 15 )
anims/opening_mini_stage = SubResource( 13 )

[connection signal="pressed" from="Close_Stage_Selection" to="." method="_on_Close_Stage_Selection_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/Stage 1-1" to="." method="_on_Stage_11_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/Stage 1-2" to="." method="_on_Stage_12_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/Stage 1-3" to="." method="_on_Stage_13_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/Stage 1-4" to="." method="_on_Stage_14_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/Stage 1-5" to="." method="_on_Stage_15_pressed"]
[connection signal="pressed" from="Stage_1/Close_Scene" to="." method="_on_Close_Scene_pressed"]
[connection signal="pressed" from="Stage_1/Stage 1-1/VBoxContainer/Enter/stage_1-1_start" to="." method="_on_stage_11_start_pressed"]
[connection signal="pressed" from="Stage_2/Close_Scene_2" to="." method="_on_Close_Scene_2_pressed"]
[connection signal="pressed" from="Stage_2/Stage 1-2/VBoxContainer/Enter/stage_1-2_start" to="." method="_on_stage_12_start_pressed"]
[connection signal="pressed" from="Stage_3/Close_Scene_3" to="." method="_on_Close_Scene_3_pressed"]
[connection signal="pressed" from="Stage_3/Stage 1-3/stage_1-3_start" to="." method="_on_stage_13_start_pressed"]
[connection signal="pressed" from="Stage_4/Close_Scene_4" to="." method="_on_Close_Scene_4_pressed"]
[connection signal="pressed" from="Stage_4/Stage 1-4/stage_1-4_start" to="." method="_on_stage_14_start_pressed"]
[connection signal="pressed" from="Stage_5/Close_Scene_5" to="." method="_on_Close_Scene_5_pressed"]
[connection signal="pressed" from="Stage_5/Stage 1-5/stage_1-5_start" to="." method="_on_stage_15_start_pressed"]
